* 0.10.0
- python2/3 compatibility in progress ....

0.9.2
- fixed frontpage (new html markup)
- removed 'im fokus' & 'orf tipps'
- changed url to https for the htmlscraper

0.9.1
- optimized live stream option for serviceapi (Issue #83)
- removed scheduled livestream because it results in an endless loop of dialog boxes (serviceapi)

0.9.0
- fixed htmlscraper (new orf tvthek website structure)
- "Im Fokus" added for the htmlscraper
- "TV Programm" added for the htmlscraper
- New icons/backdrops according to the new CI

0.8.8
- removed stream method option because its not available with the htmlscraper. Progressive streaming can still be used with the serviceAPI. 

0.8.7
- another fix for the restart option

0.8.6
- fixed restart option

0.8.5
- added UHD livestream option
- added Adaptive quality settings
- fixed "play all" item (issue #66)
- fixed "Bundesland Heute" livestream listing for the htmlscraper

0.8.4
- reverted playall fix because it resulted in a kodi crash (htmlscraper)

0.8.3
- fixed: don't set directory=true on the "play all" listitem (thx @wsnipex)
- cleanup (thx @rechi)

0.8.2
- fixed 403 errors caused by uncommon UA

0.8.1
- fixed issue #56: db entries for the addon now start with plugin://

0.8.0
- Restart Option working (inputstream.adaptive needed)
- minor changes and optimizations for the serviceAPI Scraper
- code cleanup

0.7.2
- Fixed Livestream issue by passing UA

0.7.1
- Fixed missing thumbnails/banners after 0.7.0 Update
- Fixed bad default value in settings.xml

0.7.0
- Bugfixes & Code Cleanup

0.6.1
- cleaned image resources
- renamed "getArchiv" to "getSchedule"
- prepare new "Archive" Main Menu Option

0.6.0
- fixed faulty liveurl from htmlscraper
- livestreams with the same timestamp are playable now using the htmlscraper(Bundesland Heute)

0.5.9
- Service API V3
- fixed runtime display for htmlscraper
- added Autplay Prompt Option - only working for htmlscraper

0.5.8
- fix playlist errors caused by missing parameter

0.5.7